@@ -331,8 +331,7 @@ DTAINFO
     char  dt_attr;              /*  attributes of file          20      */
                                 /*  --  below must not change -- [1]    */
     char  dt_fattr;             /*  attrib from fcb             21      */
-    int   dt_time;              /*  time field from fcb         22-23   */
-    int   dt_date;              /*  date field from fcb         24-25   */
+    DOSTIME dt_td;              /*  time, date fields from fcb  22-25   */
     long  dt_fileln;            /*  file length field from fcb  26-29   */
     char  dt_fname[14];         /*  file name from fcb          30-43   */
 } ;                             /*    includes null terminator          */
