@@ -5374,3 +5374,4 @@ Start... early ages
   in DND, OFD, and xgsdtof(). (RFB)
 - bdos/fsglob.c bdos/time.c bdos/time.h: Code cleanup: move time, date to
   time.c & make them UWORDs. (RFB)
+- bdos/fs.h bdos/fsdir.c: Code cleanup: use DOSTIME struct in DTAINFO. (RFB)
